--- a/about.html
+++ b/about.html
@@ -59,8 +59,7 @@
               <img src="images/user-1.jpg">
             </div>
             <div class="about-col-2">
-                <p>Hi! My name is Jason Chen, and I'm a 19 year old sophomore at Clark University. I am an aspiring game developer studying Interactive Media 
-                 Design and Computer Science in university. I was born in China but have lived in the Boston area since I was one year old. I started gaming
+                <p>Hi! My name is Jason Chen, and I'm a 19 year old sophomore at Clark University. I am an aspiring game developer majoring in Interactive Media Design and Data Sceince in university. I was born in China but have lived in the Boston area since I was one year old. I started gaming
                  at a young age with Pokemon Platinum but quickly realized it was much more than a hobby. This led me down the path of game development because
                  I think games are a great way to connect people, and it has been a very important part of my life. I am currently working on an undisclosed project
                  that I am looking for help on, and if you would like to learn more, shoot me a message!
